<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_tasks" />

    <item
        android:id="@+id/navigation_production"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_production" />

    <item
        android:id="@+id/navigation_finances"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_finances" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
